# poincare-section-reservoir

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
configs/: default.yaml
configs/dataset/: chen_ueta.yaml  lorenz63.yaml  rossler.yaml
configs/eval/: horizons.yaml
configs/model/: psr.yaml  readout.yaml
configs/train/: closed_loop.yaml  open_loop.yaml
notebooks/: 01_quickstart.ipynb  02_ablation.ipynb  03_figures.ipynb
scripts/: eval_psr.sh  make_figure_overlays.sh  train_psr.sh
src/psr/: __init__.py  config.py
src/psr/data/: __init__.py  generators.py  loaders.py  transforms.py
src/psr/geometry/: __init__.py  poincare.py  return_maps.py  sections.py
src/psr/graphs/: __init__.py  adjacency.py  scaling.py  small_world.py
src/psr/metrics/: __init__.py  errors.py  stability.py  timeseries.py
src/psr/pipelines/: __init__.py  cli.py  experiment.py
src/psr/readout/: __init__.py  linear.py  trainer.py
src/psr/reservoir/: __init__.py  cells.py  esn.py  ms_psr.py
src/psr/utils/: __init__.py  io.py  logging.py  math.py  seed.py
src/psr/viz/: __init__.py  plots.py  sections_viz.py
tests/: test_adjacency.py  test_esn.py  test_metrics.py  test_poincare.py  test_readout.py
